--- a/ConvertToRubi/Base.lproj/Main.storyboard
+++ b/ConvertToRubi/Base.lproj/Main.storyboard
@@ -51,11 +51,18 @@
                                 <rect key="frame" x="146" y="155" width="123" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="ふりがなを表示"/>
+                                <connections>
+                                    <action selector="convertToRubi:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NsA-W5-fGb"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="inputText" destination="sKY-pN-es7" id="22Q-Sz-s4H"/>
+                        <outlet property="outputText" destination="lrE-EL-R4b" id="xU6-7x-gZy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
